--- a/contrastenhanceimage_8cxx.html
+++ b/contrastenhanceimage_8cxx.html
@@ -17,7 +17,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="namespaces.html"><span>Namespaces</span></a></li>
       <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li id="searchli">
         <div id="MSearchBox" class="MSearchBoxInactive">
@@ -56,29 +55,30 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </table>
 <hr/><a name="details" id="details"></a><h2>Detailed Description</h2>
 <div class="textblock"><p>Enhance the contrast of an image. </p>
-<div class="fragment"><pre class="fragment">This program enhances an image.     alpha and beta control the exact behaviour of the filter. See the
-     ITK documentation of the AdaptiveHistogramEqualizationImageFilter
-     Usage:
-     pxcontrastenhanceimage
-     	-in    	InputImageFileName	
-     	-out   	OutputImageFileName
-     	-pt    	PixelType &lt;FLOAT, SHORT, USHORT, INT, UINT, CHAR, UCHAR&gt;
-     		Currently only char, uchar and short are supported.
-     	-id    	ImageDimension &lt;2,3&gt;
-     	-alpha 	0.0 &lt; alpha &lt; 1.0
-     	-beta  	0.0 &lt; beta &lt; 1.0
-     	-r0    	Integer radius of window, dimension 0
-     	-r1    	Integer radius of window, dimension 1
-     	[-r2]  	Integer radius of window, dimension 2
-     	[-LUT] 	Use Lookup-table &lt;true, false&gt;;
-     		default = true; Faster, but requires more memory.
+<div class="fragment"><pre class="fragment">This program enhances an image.
+alpha and beta control the exact behaviour of the filter. See the
+ITK documentation of the AdaptiveHistogramEqualizationImageFilter
+Usage:
+pxcontrastenhanceimage
+-in    	InputImageFileName
+-out   	OutputImageFileName
+-pt    	PixelType &lt;FLOAT, SHORT, USHORT, INT, UINT, CHAR, UCHAR&gt;
+Currently only char, uchar and short are supported.
+-id    	ImageDimension &lt;2,3&gt;
+-alpha 	0.0 &lt; alpha &lt; 1.0
+-beta  	0.0 &lt; beta &lt; 1.0
+-r0    	Integer radius of window, dimension 0
+-r1    	Integer radius of window, dimension 1
+[-r2]  	Integer radius of window, dimension 2
+[-LUT] 	Use Lookup-table &lt;true, false&gt;;
+default = true; Faster, but requires more memory.
 </pre></div> </div></div>
 <!-- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
      onmouseout="return searchBox.OnSearchSelectHide()"
      onkeydown="return searchBox.OnSearchSelectKey(event)">
-<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Namespaces</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(3)"><span class="SelectionMark">&#160;</span>Functions</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(4)"><span class="SelectionMark">&#160;</span>Variables</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(5)"><span class="SelectionMark">&#160;</span>Typedefs</a></div>
+<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Functions</a></div>
 
 <!-- iframe showing the search results (closed by default) -->
 <div id="MSearchResultsWindow">
