--- a/gaussianimagefilter_8cxx.html
+++ b/gaussianimagefilter_8cxx.html
@@ -17,7 +17,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="namespaces.html"><span>Namespaces</span></a></li>
       <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li id="searchli">
         <div id="MSearchBox" class="MSearchBoxInactive">
@@ -56,18 +55,28 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </table>
 <hr/><a name="details" id="details"></a><h2>Detailed Description</h2>
 <div class="textblock"><p>Perform a Gaussian filtering on an image. </p>
-<div class="fragment"><pre class="fragment">Usage:   pxgaussianimagefilter     -in      inputFilename     [-out]   outputFilename, default in + BLURRED.mhd     [-std]   sigma, for each dimension, default 1.0     [-ord]   order, for each dimension, default zero
-                0: zero order = blurring
-                1: first order = gradient
-                2: second order derivative     [-mag]   compute the magnitude of the separate blurrings, default false     [-lap]   compute the laplacian, default false     [-inv]   compute invariants, choose one of 
-              {LiLi, LiLijLj, LiLijLjkLk, Lii, LijLji, LijLjkLki}     [-opct]  output pixel type, default equal to input   Supported: 2D, 3D, (unsigned) char, (unsigned) short, (unsigned) int, (unsigned) long, float, double.
+<div class="fragment"><pre class="fragment">Usage:
+pxgaussianimagefilter
+  -in      inputFilename
+  [-out]   outputFilename, default in + BLURRED.mhd
+  [-std]   sigma, for each dimension, default 1.0
+  [-ord]   order, for each dimension, default zero
+             0: zero order = blurring
+             1: first order = gradient
+             2: second order derivative
+  [-mag]   compute the magnitude of the separate blurrings, default false
+  [-lap]   compute the laplacian, default false
+  [-inv]   compute invariants, choose one of
+           {LiLi, LiLijLj, LiLijLjkLk, Lii, LijLji, LijLjkLki}
+  [-opct]  output pixel type, default equal to input
+Supported: 2D, 3D, (unsigned) char, (unsigned) short, (unsigned) int, (unsigned) long, float, double.
 </pre></div> </div></div>
 <!-- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
      onmouseout="return searchBox.OnSearchSelectHide()"
      onkeydown="return searchBox.OnSearchSelectKey(event)">
-<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Namespaces</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(3)"><span class="SelectionMark">&#160;</span>Functions</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(4)"><span class="SelectionMark">&#160;</span>Variables</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(5)"><span class="SelectionMark">&#160;</span>Typedefs</a></div>
+<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Functions</a></div>
 
 <!-- iframe showing the search results (closed by default) -->
 <div id="MSearchResultsWindow">
