--- a/getimageinformation_8cxx.html
+++ b/getimageinformation_8cxx.html
@@ -17,7 +17,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="namespaces.html"><span>Namespaces</span></a></li>
       <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li id="searchli">
         <div id="MSearchBox" class="MSearchBoxInactive">
@@ -57,28 +56,29 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <hr/><a name="details" id="details"></a><h2>Detailed Description</h2>
 <div class="textblock"><p>Print information about the input image to screen. </p>
 <div class="fragment"><pre class="fragment">Usage:
-   pxgetimageinformation
-     -in      inputFileName
-     [-dim]   dimension
-     [-pt]    pixelType
-     [-ct]    componentType
-     [-noc]   #components
-     [-sz]    size
-     [-sp]    spacing
-     [-vol]   voxel volume
-     [-o]     origin
-     [-dc]    direction cosines
-     [-all]   all of the above
-   Image information about the inputFileName is printed to screen.
-   Only one option should be given, e.g. -sp, then the spacing is printed.
-     [-i]     index, if this option is given only e.g.   spacing[index] is printed.
+pxgetimageinformation
+  -in      inputFileName
+  [-dim]   dimension
+  [-pt]    pixelType
+  [-ct]    componentType
+  [-noc]   #components
+  [-sz]    size
+  [-sp]    spacing
+  [-vol]   voxel volume
+  [-o]     origin
+  [-dc]    direction cosines
+  [-all]   all of the above
+Image information about the inputFileName is printed to screen.
+Only one option should be given, e.g. -sp, then the spacing is printed.
+  [-i]     index, if this option is given only e.g.
+spacing[index] is printed.
 </pre></div> </div></div>
 <!-- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
      onmouseout="return searchBox.OnSearchSelectHide()"
      onkeydown="return searchBox.OnSearchSelectKey(event)">
-<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Namespaces</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(3)"><span class="SelectionMark">&#160;</span>Functions</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(4)"><span class="SelectionMark">&#160;</span>Variables</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(5)"><span class="SelectionMark">&#160;</span>Typedefs</a></div>
+<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Functions</a></div>
 
 <!-- iframe showing the search results (closed by default) -->
 <div id="MSearchResultsWindow">
