--- a/logicalimageoperator_8cxx.html
+++ b/logicalimageoperator_8cxx.html
@@ -17,7 +17,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="namespaces.html"><span>Namespaces</span></a></li>
       <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li id="searchli">
         <div id="MSearchBox" class="MSearchBoxInactive">
@@ -56,14 +55,44 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </table>
 <hr/><a name="details" id="details"></a><h2>Detailed Description</h2>
 <div class="textblock"><p>Perform a logical operation on an image. </p>
-<div class="fragment"><pre class="fragment">No help text provided.
+<div class="fragment"><pre class="fragment">Logical operations on one or two images.
+NOTE: The output of this filter is an image with pixels of values 0 and 1.
+An appropriate scaling must be performed either manually (with pxrescaleintensityimagefilter)
+or with the application used to view the image.
+
+In the case of a vector image, this is a componentwise logical operator.
+Usage:
+pxlogicalimageoperator
+  -in      inputFilename1 [inputFilename2]
+  [-out]   outputFilename, default in1 + &lt;ops&gt; + in2 + .mhd
+  -ops     LogicalOperator of the following form:
+             [!]( ([!] A) [{&amp;,|,^} ([!] B])] )
+           notation:
+             [NOT_][NOT][{AND,OR,XOR}[NOT]]
+           notation examples:
+             ANDNOT = A &amp; (!B)
+             NOTAND = (!A) &amp; B
+             NOTANDNOT = (!A) &amp; (!B)
+             NOT_NOTANDNOT = !( (!A) &amp; (!B) )
+             NOT_AND = !(A &amp; B)
+             OR = A | B
+             XOR = A ^ B
+             NOT = !A 
+             NOT_NOT = A
+           Internally this expression is simplified.
+  [-z]     compression flag; if provided, the output image is compressed
+  [-arg]   argument, necessary for some ops
+  [-dim]   dimension, default: automatically determined from inputimage1
+  [-pt]    pixelType, default: automatically determined from inputimage1
+Supported: 2D, 3D, (unsigned) short, (unsigned) char.
+
 </pre></div> </div></div>
 <!-- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
      onmouseout="return searchBox.OnSearchSelectHide()"
      onkeydown="return searchBox.OnSearchSelectKey(event)">
-<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Namespaces</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(3)"><span class="SelectionMark">&#160;</span>Functions</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(4)"><span class="SelectionMark">&#160;</span>Variables</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(5)"><span class="SelectionMark">&#160;</span>Typedefs</a></div>
+<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Functions</a></div>
 
 <!-- iframe showing the search results (closed by default) -->
 <div id="MSearchResultsWindow">
