--- a/naryimageoperator_8cxx.html
+++ b/naryimageoperator_8cxx.html
@@ -17,7 +17,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="namespaces.html"><span>Namespaces</span></a></li>
       <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li id="searchli">
         <div id="MSearchBox" class="MSearchBoxInactive">
@@ -56,14 +55,36 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </table>
 <hr/><a name="details" id="details"></a><h2>Detailed Description</h2>
 <div class="textblock"><p>N-ary image operator. </p>
-<div class="fragment"><pre class="fragment">No help text provided.
+<div class="fragment"><pre class="fragment">Performs n-ary operations on multiple (n) images.
+Usage:
+pxnaryimageoperator
+  -in      inputFilenames, at least 2
+  -out     outputFilename
+  -ops     n-ary operator of the following form:
+           {+,-,*,/,^,%}
+           notation:
+             {ADDITION, MINUS, TIMES, DIVIDE,
+             MEAN,
+             MAXIMUM, MINIMUM, ABSOLUTEDIFFERENCE,
+             NARYMAGNITUDE }
+           notation examples:
+             MINUS = I_0 - I_1 - ... - I_n 
+             ABSDIFF = |I_0 - I_1 - ... - I_n|
+             MIN = min( I_0, ..., I_n )
+             MAGNITUDE = sqrt( I_0 * I_0 + ... + I_n * I_n )
+  [-z]     compression flag; if provided, the output image is compressed
+  [-s]     number of streams, default equals number of inputs.
+  [-opct]  output component type, by default the largest of the two input images
+             choose one of: {[unsigned_]{char,short,int,long},float,double}
+Supported: 2D, 3D, (unsigned) char, (unsigned) short, (unsigned) int, (unsigned) long, float, double.
+
 </pre></div> </div></div>
 <!-- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
      onmouseout="return searchBox.OnSearchSelectHide()"
      onkeydown="return searchBox.OnSearchSelectKey(event)">
-<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Namespaces</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(3)"><span class="SelectionMark">&#160;</span>Functions</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(4)"><span class="SelectionMark">&#160;</span>Variables</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(5)"><span class="SelectionMark">&#160;</span>Typedefs</a></div>
+<a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(0)"><span class="SelectionMark">&#160;</span>All</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(1)"><span class="SelectionMark">&#160;</span>Files</a><a class="SelectItem" href="javascript:void(0)" onclick="searchBox.OnSelectItem(2)"><span class="SelectionMark">&#160;</span>Functions</a></div>
 
 <!-- iframe showing the search results (closed by default) -->
 <div id="MSearchResultsWindow">
