--- a/search/all_6f.html
+++ b/search/all_6f.html
@@ -7,24 +7,15 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_operator_3c_3c">
- <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../braindistance_8cxx.html#ae423783291bc130b0eba84f49fe62a85" target="_parent">operator&lt;&lt;</a>
-  <span class="SRScope">braindistance.cxx</span>
- </div>
-</div>
 <div class="SRResult" id="SR_otsumultiplethresholdimage">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_otsumultiplethresholdimage')">OtsuMultipleThresholdImage</a>
-  <div class="SRChildren">
-    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../thresholdimage_8cxx.html#ad2e2619bff9a4ccbc0704196c70c91a9" target="_parent">OtsuMultipleThresholdImage(const std::string &amp;inputFileName, const std::string &amp;outputFileName, const std::string &amp;maskFileName, const double &amp;inside, const double &amp;outside, const unsigned int &amp;bins, const unsigned int &amp;numThresholds):&#160;thresholdimage.cxx</a>
-    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../thresholdimage_8cxx.html#ad4bbfec4eb851b69b9ee9b17af8bd648" target="_parent">OtsuMultipleThresholdImage(const std::string &amp;inputFileName, const std::string &amp;outputFileName, const std::string &amp;itkNotUsed(maskFileName), const double &amp;inside, const double &amp;outside, const unsigned int &amp;bins, const unsigned int &amp;numThresholds):&#160;thresholdimage.cxx</a>
-  </div>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../thresholdimage_8cxx.html#ad4bbfec4eb851b69b9ee9b17af8bd648" target="_parent">OtsuMultipleThresholdImage</a>
+  <span class="SRScope">thresholdimage.cxx</span>
  </div>
 </div>
 <div class="SRResult" id="SR_otsuthresholdimage">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../thresholdimage_8cxx.html#af908ec504ecacc74e6216994005fd885" target="_parent">OtsuThresholdImage</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../thresholdimage_8cxx.html#af908ec504ecacc74e6216994005fd885" target="_parent">OtsuThresholdImage</a>
   <span class="SRScope">thresholdimage.cxx</span>
  </div>
 </div>
